# pallas-plugin-duel

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
src/pallas_plugin_duel/: __init__.py  arknights_ops.py  arknights_skill_text.py  config.py  duel_bots.py  duel_labels.py  duel_message.py  duel_penalty.py  duel_qte.py  duel_round_engine.py  duel_send.py  duel_session.py  duel_terms.py  shard_cage.py
src/pallas_plugin_duel/event_packs/: README.md
src/pallas_plugin_duel/event_packs/default/: challenger.json  defender.json  exchange.json  public.json
src/pallas_plugin_duel/event_packs/examples/: example_exchange.json  example_hero.json  example_public.json
